# Generic-Spatial-Renderer-Daemon

./: BUILD.md  BUILDING_WINDOWS.md  Cargo.toml  OSC_PROTOCOL.md  QUICKSTART.md  README.md
audio_output/src/: asio.rs  lib.rs  pipewire.rs
bridge_api/src/: lib.rs
renderer/: Cargo.toml  build.rs
renderer/src/: config.rs  live_params.rs  osc_output.rs  spatial_renderer.rs
renderer/src/spatial_vbap/: mod.rs  panner.rs
renderer/src/spatial_vbap/panner/: io.rs  runtime.rs
spdif/src/: parser.rs
src/: main.rs
src/cli/: command.rs  list_asio_devices.rs  mod.rs
src/cli/decode/: decode_impl.rs  decoder_thread.rs  handler.rs  output.rs
sys/: Cargo.toml
sys/src/: input.rs  lib.rs  shutdown.rs
